# shellie

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
shellie/: __init__.py  agent.py  cli.py  cognee_memory.py  config.py  images.py  paths.py  session_memory.py  shell.py  tools.py  ui.py  web_fetch.py
shellie/lint_configs/: README.md  browser_globals.mjs  eslint.jsx.mjs  eslint.module.mjs  eslint.script.mjs
shellie/mcp/: __init__.py  auth.py  catalog.py  cli.py  client.py  config.py  mcp.py
